--- a/App-bureau9000/app/src/main/res/layout/fragment_risicos_gebouw.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_risicos_gebouw.xml
@@ -38,18 +38,29 @@
         <ListView
             android:id="@+id/ListViewRisicosGebouw"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="30dp" />
 
         <Button
+            android:id="@+id/buttonAddRisicoToGebouw"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:text="Voeg een risico toe">
 
         </Button>
+
+        <Button
+            android:id="@+id/buttonNextStep2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:text="NEXT" />
 
 
     </LinearLayout>
