--- a/App-bureau9000/app/src/main/res/layout/fragment_add_project_gegevens.xml
+++ b/App-bureau9000/app/src/main/res/layout/fragment_add_project_gegevens.xml
@@ -25,10 +25,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Vul de gegevens van het project in aan"
+                android:text="Vul de gegevens van het project in"
                 android:textColor="@color/black"
                 android:layout_marginTop="25dp"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/TextViewNaamProject"
@@ -38,7 +38,7 @@
                 android:gravity="center"
                 android:text="NAAM VAN HET PROJECT KOMT HIER"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/TextViewOpdrachtGever"
@@ -49,7 +49,7 @@
                 android:text="Gegevens van de opdrachtgever"
                 android:background="@drawable/shapes"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/TextViewNaamOpdrachtGever"
@@ -59,7 +59,7 @@
                 android:gravity="center"
                 android:text="Naam opdrachtgever"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editTextNaamOpdrachtGever"
@@ -67,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
+                android:textSize="20sp"
                 android:hint="Naam opdrachtgever..." />
 
             <CheckBox
@@ -85,13 +86,14 @@
                 android:gravity="center"
                 android:text="Naam klant"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editTextNaamKlant"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:textSize="20sp"
                 android:gravity="center"
                 android:hint="Naam klant..." />
 
@@ -103,7 +105,7 @@
                 android:gravity="center"
                 android:text="Adres opdrachtgever"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editTextAdresOpdrachtgever"
@@ -111,6 +113,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
+                android:textSize="20sp"
                 android:hint="Straat + nummer" />
 
             <TextView
@@ -121,7 +124,7 @@
                 android:gravity="center"
                 android:text="Postcode opdrachtgever"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editTextPostcodeOpdrachtGever"
@@ -130,6 +133,7 @@
                 android:ems="10"
                 android:inputType="number"
                 android:gravity="center"
+                android:textSize="20sp"
                 android:hint="Postcode" />
 
             <TextView
@@ -140,13 +144,14 @@
                 android:gravity="center"
                 android:text="Gemeente opdrachtgever"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editTextGemeenteOpdrachtGever"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:textSize="20sp"
                 android:gravity="center"
                 android:hint="Gemeente" />
 
@@ -158,13 +163,14 @@
                 android:gravity="center"
                 android:text="Email opdrachtgever "
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editTextContactOpdrachtGever"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:textSize="20sp"
                 android:gravity="center"
                 android:hint="Email" />
 
